--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
   "dependencies": {
     "glob": "^7.1.6",
     "glob-parent": "^5.1.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.5"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
     "@types/glob-parent": "^5.1.0",
-    "@types/jest": "^24.9.0",
+    "@types/jest": "^25.2.1",
     "@types/minimist": "^1.2.0",
     "@types/rimraf": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
@@ -54,14 +54,14 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "~24.8.0",
+    "jest": "^25.4.0",
     "rimraf": "~2.6.3",
-    "ts-jest": "^24.3.0",
+    "ts-jest": "^25.4.0",
     "ts-loader": "^6.2.1",
     "tslib": "^1.10.0",
     "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
   }
 }
